--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
         </div>
     {% endfor %}
     <footer class="mt-5" style="text-align: center;padding: 36px 0 36px 0;background-color: black">
-        <p style="color: white">sb-scanner.info</p>
+        <p style="color: white">Made by Wonwoo Seo</p>
+        <a href="https://api.sb-scanner.info/latest" style="color:white">API</a>
     </footer>
 </body>
 </html>
